# mlops-agent

./: .env.example  .gitignore  ARCHITECTURE.md  competitor_intelligence_solution.docx  competitor_intelligence_solution.md  pyproject.toml  requirements.txt  run.ps1  run.sh
backend/: main.py
backend/agent/: graph.py
backend/agent/tools/: azure_ml.py  azure_repo.py  drift.py
frontend/: app.py  chainlit_app.py
frontend/public/: custom.css
src/mlops_agent/: __init__.py  configuration.py  graph.py  state.py
src/mlops_agent/nodes/: environment.py  inference.py  monitoring.py  supervisor.py  tool_executor.py  training.py
src/mlops_agent/prompts/: agents.py  supervisor.py
src/mlops_agent/tools/azure/: __init__.py  devops.py  repo.py
src/mlops_agent/tools/mlops/: __init__.py  artifacts.py  sanity.py
tests/integration/: test_graph.py
tests/unit/: test_tools_ml.py  test_tools_repo.py
